--- a/TheLab/TheLab.kv
+++ b/TheLab/TheLab.kv
@@ -1,4 +1,50 @@
-ImagesExample:
+CanvasExample6:
+
+#:set s dp(150)
+
+<CanvasExample6>:
+    Button:
+        text: "A"
+    
+<CanvasExample4>:
+    Button:
+        text: "A"
+        pos: 100, 400
+        on_press: root.on_button_a_click()
+
+<CanvasExample3>:
+    canvas:
+        Color:
+            rgb: 1, 0, 0
+        Line:
+            circle: (200, 200, 100) #x, y, radius
+        Color:
+            rgb: 0, 1, 0
+        Line:
+            ellipse: (500, 300, 100, 200) #center_x, center_y, radius_x, radius_y
+        Line:
+            Rectangle: (800, 100, 300, 120) #x, y, w, h
+
+<CanvasExample2>:
+    canvas:
+        Line:
+            points(self.width/2, 0, self.width/2, self.height)
+            width: 2
+        Line:
+            points(0, self.height/2, self.width, self.height/2)
+            width: 2
+
+<CanvasExample1>:
+    canvas:
+        Rectangle:
+            pos: self.center_x/2, self.center_y/2
+            size: dp(150), s
+        Ellipse:
+            pos: 200, 500
+            size: s, s/2
+        Line:
+            points(0, 0, self.width/4, 100, self.width/2, 0, self.width*3/4, self.width, 100)
+            width: 2
 
 <ImagesExample@GridLayout>: 
     cols:3
