--- a/TheLab/TheLab.kv
+++ b/TheLab/TheLab.kv
@@ -2,9 +2,16 @@ CanvasExample6:
 
 #:set s dp(150)
 
+#An example to pay attention to the order
 <CanvasExample6>:
     Button:
+        canvas.before: # .before says that canvas element take place firstly
+            Rectangle:
         text: "A"
+        pos: 100, 100 # the text moves, but the Rectanglenot
+        #Use RelativeLayout instead of Button to move all together
+        # OR use buttons inside of RelativeLayout
+        
     
 <CanvasExample4>:
     Button:
